[tool]
[tool.poetry]
name = "esmama"
version = "0.0.1"
description = "Elasticsearch Mapping Manager"
authors = ["Sebastian Hätälä <19345882+hatala91@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
elasticsearch = "^7.8.1"

[tool.poetry.dev-dependencies]
black = "==20.8b1"
docker = "*"
flake8 = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
testcontainers = "*"
